--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.nader-safa.nefer-balance"
     },
     "android": {
       "adaptiveIcon": {
